wine, wine-devel: whitespace changes only
git-svn-id: https://svn.macports.org/repository/macports/trunk@69478 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/wine-devel/Portfile
+++ b/dports/x11/wine-devel/Portfile
@@ -1,154 +1,147 @@
 # $Id$
 
-PortSystem              1.0
-PortGroup               archcheck 1.0
-PortGroup               xcodeversion 1.0
+PortSystem                  1.0
+PortGroup                   archcheck 1.0
+PortGroup                   xcodeversion 1.0
 
-name                    wine-devel
-conflicts               wine wine-crossover-games
-set my_name             wine
-version                 1.2-rc6
-license                 LGPL-2.1+
-categories              x11
-maintainers             ryandesign jwa openmaintainer
-homepage                http://www.winehq.org/
-platforms               darwin
-use_bzip2               yes
-distname                ${my_name}-${version}
-dist_subdir             ${my_name}
-set wine_distfile       [suffix ${distname}]
-set wine_gecko_distfile wine_gecko-1.0.0-x86.cab
-distfiles               ${wine_distfile} ${wine_gecko_distfile}
-extract.only            ${wine_distfile}
-build.target            depend all
-use_parallel_build      yes
-universal_variant       no
+name                        wine-devel
+conflicts                   wine wine-crossover-games
+set my_name                 wine
+version                     1.2-rc6
+license                     LGPL-2.1+
+categories                  x11
+maintainers                 ryandesign jwa openmaintainer
+homepage                    http://www.winehq.org/
+platforms                   darwin
+use_bzip2                   yes
+distname                    ${my_name}-${version}
+dist_subdir                 ${my_name}
+set wine_distfile           [suffix ${distname}]
+set wine_gecko_distfile     wine_gecko-1.0.0-x86.cab
+distfiles                   ${wine_distfile} ${wine_gecko_distfile}
+extract.only                ${wine_distfile}
+build.target                depend all
+use_parallel_build          yes
+universal_variant           no
 
-minimum_xcodeversions   {8 2.5}
+minimum_xcodeversions       {8 2.5}
 
-description \
-    Wine Is Not an Emulator
+description                 Wine Is Not an Emulator
 
-long_description \
-    Wine is an implementation of the Windows APIs on top of X11.
+long_description            Wine is an implementation of the Windows APIs on top of X11.
 
-master_sites \
-    sourceforge:wine \
-    http://ibiblio.org/pub/linux/system/emulators/wine/
+master_sites                sourceforge:wine \
+                            http://ibiblio.org/pub/linux/system/emulators/wine/
 
-checksums \
-    ${wine_distfile} \
-    md5     689c6ae6baaa33ca6532af2cec05d26b \
-    sha1    07cb82572090347ba671abebc6347d75bcd4a8f6 \
-    rmd160  cf9be75ead99e1d9ebac0e4a83f2dde6a7776598 \
-    ${wine_gecko_distfile} \
-    md5     9c5c335fc077c0558561afaf25a09e51 \
-    sha1    afa22c52bca4ca77dcb9edb3c9936eb23793de01 \
-    rmd160  57618dbffa7b7226dcd44f86c3c569ab8a5ff938
+checksums                   ${wine_distfile} \
+                            md5     689c6ae6baaa33ca6532af2cec05d26b \
+                            sha1    07cb82572090347ba671abebc6347d75bcd4a8f6 \
+                            rmd160  cf9be75ead99e1d9ebac0e4a83f2dde6a7776598 \
+                            ${wine_gecko_distfile} \
+                            md5     9c5c335fc077c0558561afaf25a09e51 \
+                            sha1    afa22c52bca4ca77dcb9edb3c9936eb23793de01 \
+                            rmd160  57618dbffa7b7226dcd44f86c3c569ab8a5ff938
 
 # Note: Most of the X11 libs are dlopen()'d
-depends_lib \
-    port:expat \
-    port:fontconfig \
-    port:freetype \
-    port:jpeg \
-    port:lcms \
-    port:libiconv \
-    port:libpng \
-    port:libxml2 \
-    port:libxslt \
-    port:ncurses \
-    port:openssl \
-    port:tiff \
-    port:zlib \
-    port:xorg-libsm \
-    port:xorg-libXcomposite \
-    port:xorg-libXcursor \
-    port:xorg-libXi \
-    port:xorg-libXinerama \
-    port:xorg-libXrandr \
-    port:xorg-libXxf86vm \
-    port:mesa
+depends_lib                 port:expat \
+                            port:fontconfig \
+                            port:freetype \
+                            port:jpeg \
+                            port:lcms \
+                            port:libiconv \
+                            port:libpng \
+                            port:libxml2 \
+                            port:libxslt \
+                            port:ncurses \
+                            port:openssl \
+                            port:tiff \
+                            port:zlib \
+                            port:xorg-libsm \
+                            port:xorg-libXcomposite \
+                            port:xorg-libXcursor \
+                            port:xorg-libXi \
+                            port:xorg-libXinerama \
+                            port:xorg-libXrandr \
+                            port:xorg-libXxf86vm \
+                            port:mesa
 
-archcheck.files         lib/libexpat.dylib \
-                        lib/libfontconfig.dylib \
-                        lib/libfreetype.dylib \
-                        lib/libjpeg.dylib \
-                        lib/liblcms.dylib \
-                        lib/libiconv.dylib \
-                        lib/libpng.dylib \
-                        lib/libxml2.dylib \
-                        lib/libxslt.dylib \
-                        lib/libncurses.dylib \
-                        lib/libssl.dylib \
-                        lib/libtiff.dylib \
-                        lib/libz.dylib \
-                        lib/libSM.dylib \
-                        lib/libXcomposite.dylib \
-                        lib/libXcursor.dylib \
-                        lib/libXi.dylib \
-                        lib/libXinerama.dylib \
-                        lib/libXrandr.dylib \
-                        lib/libXxf86vm.dylib \
-                        lib/libGL.dylib
+archcheck.files             lib/libexpat.dylib \
+                            lib/libfontconfig.dylib \
+                            lib/libfreetype.dylib \
+                            lib/libjpeg.dylib \
+                            lib/liblcms.dylib \
+                            lib/libiconv.dylib \
+                            lib/libpng.dylib \
+                            lib/libxml2.dylib \
+                            lib/libxslt.dylib \
+                            lib/libncurses.dylib \
+                            lib/libssl.dylib \
+                            lib/libtiff.dylib \
+                            lib/libz.dylib \
+                            lib/libSM.dylib \
+                            lib/libXcomposite.dylib \
+                            lib/libXcursor.dylib \
+                            lib/libXi.dylib \
+                            lib/libXinerama.dylib \
+                            lib/libXrandr.dylib \
+                            lib/libXxf86vm.dylib \
+                            lib/libGL.dylib
 
-depends_build \
-    port:flex \
-    port:pkgconfig
+depends_build               port:flex \
+                            port:pkgconfig
 
-configure.ldflags-append \
-    -framework CoreServices \
-    -lz
+configure.ldflags-append    -framework CoreServices \
+                            -lz
 
-configure.args          --without-alsa \
-                        --without-audioio \
-                        --without-capi \
-                        --with-cms \
-                        --with-coreaudio \
-                        --without-cups \
-                        --with-curses \
-                        --without-esd \
-                        --with-fontconfig \
-                        --with-freetype \
-                        --without-gphoto \
-                        --with-glu \
-                        --without-gnutls \
-                        --without-gsm \
-                        --without-hal \
-                        --without-jack \
-                        --with-jpeg \
-                        --without-ldap \
-                        --without-mpg123 \
-                        --without-nas \
-                        --without-openal \
-                        --with-opengl \
-                        --with-openssl \
-                        --without-oss \
-                        --with-png \
-                        --with-pthread \
-                        --without-sane \
-                        --with-tiff \
-                        --without-v4l \
-                        --with-xcomposite \
-                        --with-xcursor \
-                        --with-xinerama \
-                        --with-xinput \
-                        --with-xml \
-                        --with-xrandr \
-                        --with-xrender \
-                        --with-xshape \
-                        --with-xshm \
-                        --with-xslt \
-                        --with-xxf86vm \
-                        --with-x \
-                        --x-include=${prefix}/include \
-                        --x-lib=${prefix}/lib
+configure.args              --without-alsa \
+                            --without-audioio \
+                            --without-capi \
+                            --with-cms \
+                            --with-coreaudio \
+                            --without-cups \
+                            --with-curses \
+                            --without-esd \
+                            --with-fontconfig \
+                            --with-freetype \
+                            --without-gphoto \
+                            --with-glu \
+                            --without-gnutls \
+                            --without-gsm \
+                            --without-hal \
+                            --without-jack \
+                            --with-jpeg \
+                            --without-ldap \
+                            --without-mpg123 \
+                            --without-nas \
+                            --without-openal \
+                            --with-opengl \
+                            --with-openssl \
+                            --without-oss \
+                            --with-png \
+                            --with-pthread \
+                            --without-sane \
+                            --with-tiff \
+                            --without-v4l \
+                            --with-xcomposite \
+                            --with-xcursor \
+                            --with-xinerama \
+                            --with-xinput \
+                            --with-xml \
+                            --with-xrandr \
+                            --with-xrender \
+                            --with-xshape \
+                            --with-xshm \
+                            --with-xslt \
+                            --with-xxf86vm \
+                            --with-x \
+                            --x-include=${prefix}/include \
+                            --x-lib=${prefix}/lib
 
 # This is not 64-bit friendly yet
 if {[info exists supported_archs]} {
-    supported_archs i386
+supported_archs             i386
 }
-configure.build_arch i386
+configure.build_arch        i386
 
 platform darwin 9 {
     # Fix "Xcode 3.x cannot build 16-bit code correctly. Use --disable-win16 if you don't need 16-bit support."
@@ -188,5 +181,5 @@ post-destroot {
         ${destroot}${prefix}/share/doc/${name}
 }
 
-livecheck.type          regex
-livecheck.regex         {"/announce/([0-9]+\.[0-9]*([13579]|[02468]-rc\d+)(\.[0-9]+)*)"}
+livecheck.type              regex
+livecheck.regex             {"/announce/([0-9]+\.[0-9]*([13579]|[02468]-rc\d+)(\.[0-9]+)*)"}
