texi2html: update to 5.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@69479 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/texi2html/Portfile
+++ b/dports/textproc/texi2html/Portfile
@@ -3,22 +3,21 @@
 PortSystem 1.0
 
 name		texi2html
-version		1.82
+version		5.0
 platforms	darwin
-if {[info exists supported_archs]} {
-    supported_archs noarch
-}
+supported_archs noarch
 categories	textproc
 maintainers	nomaintainer
 description	A Perl script which converts Texinfo source files to HTML output.
 long_description \
 	A Perl script which converts Texinfo source files to HTML output.
 homepage	http://www.nongnu.org/${name}
-master_sites	http://savannah.nongnu.org/download/${name}
+master_sites	savannah
 
-checksums       md5     7ea537a8c81ffbf5421b39c0333e91df \
-                sha1    e7bbe1197147566250abd5c456b94c8e37e0a81f \
-                rmd160  1949d1d857cb71e1b5070e36223a26896910d523
+use_bzip2       yes
+checksums       md5     f15ac876fcdc8be865b16535f480aa54 \
+                sha1    20072444ce814d0e74fd7e467d1506908f8c889c \
+                rmd160  193d2ab489e61546100a57943c410deffb8d4c4b
 
 patchfiles	patch-test-run_test.sh.diff
 
@@ -31,8 +30,6 @@ use_parallel_build  yes
 test.run	yes
 test.target	check
 
-universal_variant   no
-
 livecheck.type	regex
-livecheck.url	${master_sites}
+livecheck.url	http://download.savannah.gnu.org/releases-noredirect/${name}/
 livecheck.regex	${name}-(\\d+(?:\\.\\d+)*)
