--- a/dports/python/py26-matplotlib/Portfile
+++ b/dports/python/py26-matplotlib/Portfile
@@ -5,7 +5,7 @@ PortGroup          python26 1.0
 
 categories-append  graphics math
 name               py26-matplotlib
-version            0.99.3
+version            1.0.0
 maintainers        ram openmaintainer
 platforms          darwin
 
@@ -21,9 +21,9 @@ homepage           http://matplotlib.sourceforge.net
 master_sites       sourceforge:matplotlib
 distname           matplotlib-${version}
 
-checksums          md5 c21a367dea3b98660adbb898a2f53dbc \
-                   sha1 1819ac7f9b22c942ee23c635c43825cd1e8865cc \
-                   rmd160 8309fc700717119c71603829890fd0eb73b376e2
+checksums          md5 7d964de548c9887917762a11e0ffecd3 \
+                   sha1 6004e83d09f064ecb3fe15c8ff09d61fb454757f \
+                   rmd160 b833a1d0eb708bfe46322914171ab2714b0da549
 
 depends_lib-append port:freetype \
                    port:libpng \
@@ -35,8 +35,7 @@ depends_lib-append port:freetype \
 
 patchfiles         patch-setupext.py.diff \
                    patch-setup.cfg.diff \
-                   patch-disable_optional_deps.diff \
-                   patch-eintr.diff
+                   patch-disable_optional_deps.diff
 
 build.env          MPLIB_BASE="${prefix}" PKG_CONFIG_PATH="${python.prefix}/lib/pkgconfig/"
 
