clisp: fix build on Snow Leopard without libsigsegv installed: as of MacPorts 1.9, configure.args-append in a platform block needs to come after configure.args (see #25496)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69483 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/clisp/Portfile
+++ b/dports/lang/clisp/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name            clisp
 version         2.48
+revision        1
 categories      lang
 maintainers     waqar
 platforms       darwin
@@ -44,16 +45,6 @@ if {$build_arch == "x86_64"} {
     configure.build_arch ppc
 }
 
-variant nolibsigsegv {
-    depends_lib-delete      port:libsigsegv
-    configure.args-append   --ignore-absence-of-libsigsegv
-}
-
-platform darwin 10 {
-    depends_lib-delete      port:libsigsegv
-    configure.args-append   --ignore-absence-of-libsigsegv
-}
-
 configure.cflags
 configure.args --prefix=${prefix} --with-libreadline-prefix=${prefix} \
                --with-libsigsegv-prefix=${prefix} --with-libiconv-prefix=${prefix}
@@ -75,6 +66,16 @@ build {
     set cmdstring "$cmdstring check"
     ui_debug "EXECUTING: $cmdstring"
     system $cmdstring
+}
+
+variant nolibsigsegv {
+    depends_lib-delete      port:libsigsegv
+    configure.args-append   --ignore-absence-of-libsigsegv
+}
+
+platform darwin 10 {
+    depends_lib-delete      port:libsigsegv
+    configure.args-append   --ignore-absence-of-libsigsegv
 }
 
 livecheck.type  regex
