clisp: use supported_archs
git-svn-id: https://svn.macports.org/repository/macports/trunk@69484 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/clisp/Portfile
+++ b/dports/lang/clisp/Portfile
@@ -39,11 +39,7 @@ depends_lib     port:readline   \
 build.dir       ${worksrcpath}/src
 
 # Force 32-bit, inline-asm
-if {$build_arch == "x86_64"} {
-     configure.build_arch i386   
-} elseif {$build_arch == "ppc64"} {
-    configure.build_arch ppc
-}
+supported_archs ppc i386
 
 configure.cflags
 configure.args --prefix=${prefix} --with-libreadline-prefix=${prefix} \
