--- a/dports/aqua/qt4-mac/Portfile
+++ b/dports/aqua/qt4-mac/Portfile
@@ -13,7 +13,7 @@ set select_name     ${select_group}-${select_branch}
 name                ${select_name}
 #conflicts           kdelibs3 kdelibs4 xmlrpcxx
 version             4.6.3
-revision            1
+revision            2
 categories          aqua
 platforms           macosx
 maintainers         michaelld
@@ -267,14 +267,55 @@ post-destroot {
             ${destroot}${qt_dir}/share/doc/${name}
     }
 
-    # install the appropriate select file
+    # Fix includes
+    # (1) Remove include/Qt ; it should never be used
+    if {[file exists ${destroot}${qt_dir}/include/Qt]} {
+        delete ${destroot}${qt_dir}/include/Qt
+    }
+
+    # (2) remove from ${qt_dir}/include/FOO, for each FOO in the
+    # frameworks, and link into the headers provided by the FOO framework
+    foreach fms [glob -nocomplain -directory ${destroot} \
+                     ${qt_dir}/lib/*.framework] {
+        # 0: split the framework abs path using '/'
+        set tmp [split ${fms} /]
+        # 1: retrieve the framework name
+        set tfm [lindex [split [lindex ${tmp} [expr [llength ${tmp}] - 1]] .] 0]
+        # 2: remove the include directory, if it exists
+        if {[file exists ${destroot}${qt_dir}/include/${tfm}] } {
+            # if it exists
+            delete ${destroot}${qt_dir}/include/${tfm}
+        }
+        # 3: link into the framework's Headers
+        ln -s ${qt_dir}/lib/${tfm}.framework/Headers \
+            ${destroot}${qt_dir}/include/${tfm}
+    }
+
+    # install the select file
     xinstall -m 755 -d ${destroot}${prefix}/etc/select/${select_group}
+    xinstall -c -m 644 ${filespath}/${select_name} \
+        ${destroot}${prefix}/etc/select/${select_group}/${select_name}
+
+    # then, reinplace the select file as necessary for variants; put
+    # these here instead of in the variants because I don't know which
+    # are executed first (this post-destroot or a variant's) & the
+    # select file needs to be in place first.
     if {[variant_isset no_debug]} {
-        xinstall -c -m 644 ${filespath}/${select_name}-no-debug \
+        # remove select entries for debug
+        reinplace "/debug/ c\\\n-\n" \
             ${destroot}${prefix}/etc/select/${select_group}/${select_name}
-    } else {
-        xinstall -c -m 644 ${filespath}/${select_name} \
+    }
+    if {[variant_isset no_demo]} {
+        # remove select entries for demo
+        reinplace "/demo/ c\\\n-\n" \
             ${destroot}${prefix}/etc/select/${select_group}/${select_name}
+
+        # special case: if no examples and no debug,
+        if {[variant_isset no_examples]} {
+            # remove select entry for share/qt4-mac
+            reinplace "/share\\/qt4-mac/ c\\\n-\n" \
+                ${destroot}${prefix}/etc/select/${select_group}/${select_name}
+        }
     }
 }
 
@@ -292,6 +333,23 @@ To fully complete this installation and make ${name} the default,\n \
 please run:\n \
 \tsudo ${select_port} ${select_name}"
         }
+    }
+}
+
+pre-deactivate {
+    # If this is qt4-* is selected, select 'none' & tell the user
+    if { [exec ${prefix}/bin/${select_port} -s] == ${select_name} } {
+        system "${prefix}/bin/${select_port} none"
+        ui_msg "\
+Port '${current_select}' was selected; none is now selected.\n \
+To select another port for group '${select_group}', \
+please run '${select_port}'."
+    }
+
+    # remove case-sensitive ${prefix}/${qt_dir}/include/phonon/[Pp]honon
+    foreach tf [glob -directory ${prefix}/${qt_dir}/include/phonon \
+                     ?honon] {
+        delete ${tf}
     }
 }
 
