--- a/dports/sysutils/qt4_select/Portfile
+++ b/dports/sysutils/qt4_select/Portfile
@@ -6,7 +6,7 @@ PortGroup select 1.0
 
 name                    qt4_select
 version                 0.3
-revision                2
+revision                3
 categories              sysutils
 platforms               darwin
 license                 BSD
@@ -28,6 +28,8 @@ if {[info exists supported_archs]} {
 } else {
     universal_variant no
 }
+
+patchfiles              patch-select.sh.diff
 
 configure.args          --mandir=${prefix}/share/man --name=qt4
 
