--- a/dports/kde/amarok/Portfile
+++ b/dports/kde/amarok/Portfile
@@ -6,6 +6,7 @@ PortGroup           kde4    1.0
 
 name                amarok
 version             2.3.1
+revision            1
 categories          kde kde4
 maintainers         illogic-al openmaintainer
 description         Amarok, the world-renowned media player.
@@ -26,15 +27,22 @@ depends_lib-append  port:kdebase4-runtime port:kdelibs4 \
                     port:loudmouth port:qca port:libmtp port:libgpod \
                     path:bin/mysql_config5:mysql5
 
-patchfiles          patch-src-app-mac.patch
-patch.dir           ${workpath}/${distname}
-patch.pre_args      -p1
+#patchfiles          patch-src-app-mac.patch
+#patch.dir           ${workpath}/${distname}
+#patch.pre_args      -p1
 
 pre-configure {
     if {![file exists ${prefix}/lib/mysql5/mysql/libmysqld.a]} {
         ui_error "${name} cannot be installed because MySQL was not installed with the libmysqld embedded server."
         return -code error "incompatible MySQL installation"
     }
+}
+
+post-patch {
+    # fix 32/64-bit pointer for 'this' in AE
+    reinplace "s@long@URefCon@g" ${workpath}/${distname}/src/app_mac.cpp
+    reinplace "/setupEventHandler_mac/s@long@URefCon@g" \
+        ${workpath}/${distname}/src/App.cpp
 }
 
 # have to include the various paths to the header and library manually
