libhsplasma: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@69498 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libhsplasma/Portfile
+++ b/dports/devel/libhsplasma/Portfile
@@ -37,3 +37,8 @@ configure.args              --with-pkgconfig \
 build.args                  CXX=${configure.cxx}
 
 destroot.destdir            PREFIX=${destroot}${prefix}
+
+livecheck.type              regex
+livecheck.url               ${hg.url}
+livecheck.version           [lindex [split ${version} -] 1]
+livecheck.regex             {rev (\d+)}
