daapd: use port:-style dependencies
git-svn-id: https://svn.macports.org/repository/macports/trunk@69500 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/daapd/Portfile
+++ b/dports/audio/daapd/Portfile
@@ -20,9 +20,9 @@ extract.suffix  .tgz
 checksums       md5 330e2a89d77b086a64bbe8cdf24a00f2
 patchfiles      patch-makefile patch-daapd.cc patch-daapd.8 patch-select.h
 
-depends_lib     lib:libz:zlib \
-            lib:libid3tag:libid3tag \
-            lib:libhowl:howl
+depends_lib         port:zlib \
+                    port:libid3tag \
+                    port:howl
 
 post-patch {
     reinplace s|@PREFIX@|${prefix}|g    ${worksrcpath}/daapd.cc \
