daapd: reuse homepage in master_sites
git-svn-id: https://svn.macports.org/repository/macports/trunk@69501 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/daapd/Portfile
+++ b/dports/audio/daapd/Portfile
@@ -15,7 +15,7 @@ long_description    daapd scans a directory for music files (mp3, aac, \
             by streaming or by downloading them.
 
 homepage        http://www.deleet.de/projekte/daap/daapd/
-master_sites    http://www.deleet.de/projekte/daap/daapd/
+master_sites    ${homepage}
 extract.suffix  .tgz
 checksums       md5 330e2a89d77b086a64bbe8cdf24a00f2
 patchfiles      patch-makefile patch-daapd.cc patch-daapd.8 patch-select.h
