daapd: update to 0.2.4b, fix compilation of and also install libdaaplib.a
git-svn-id: https://svn.macports.org/repository/macports/trunk@69503 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/daapd/Portfile
+++ b/dports/audio/daapd/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name            daapd
-version         0.2.4a
+version         0.2.4b
 categories      audio net
 platforms       darwin
 maintainers     nomaintainer
@@ -17,21 +17,32 @@ long_description    daapd scans a directory for music files (mp3, aac, \
 homepage        http://www.deleet.de/projekte/daap/daapd/
 master_sites    ${homepage}
 extract.suffix  .tgz
-checksums       md5 330e2a89d77b086a64bbe8cdf24a00f2
-patchfiles      patch-makefile patch-daapd.cc patch-daapd.8 patch-select.h
+
+checksums           md5     3a83294a9eb88b27bae7f5dd06394c49 \
+                    sha1    0903303f155c19ae12cdc78be05799508156a16b \
+                    rmd160  899b37b3872623ef918f7faa4eb8bad2dfc5b369
 
 depends_lib         port:zlib \
                     port:libid3tag \
                     port:howl
 
+patchfiles          patch-daapd.cc patch-daapd.8 patch-daaplib-src-makefile patch-select.h patch-makefile
+
+post-extract {
+    # Convert DOS to UNIX line endings so we can patch
+    reinplace "s|\r||g" ${worksrcpath}/daaplib/src/makefile
+}
+
 post-patch {
     reinplace s|@PREFIX@|${prefix}|g    ${worksrcpath}/daapd.cc \
-                        ${worksrcpath}/makefile \
-                        ${worksrcpath}/daapd.8
+                        ${worksrcpath}/daapd.8 \
+                        ${worksrcpath}/daaplib/src/makefile \
+                        ${worksrcpath}/makefile
 }
 
 destroot {
     xinstall -m 755 ${worksrcpath}/daapd ${destroot}${prefix}/sbin/
+    xinstall -m 644 ${worksrcpath}/daaplib/src/libdaaplib.a ${destroot}${prefix}/lib/
     xinstall -m 644 ${worksrcpath}/daapd.conf ${destroot}${prefix}/etc/daapd.conf.dist
     xinstall -m 644 ${worksrcpath}/daapd.8 ${destroot}${prefix}/share/man/man8/
 }
