--- a/dports/math/pspp-devel/Portfile
+++ b/dports/math/pspp-devel/Portfile
@@ -4,10 +4,10 @@
 PortSystem          1.0
 
 name                pspp-devel
-set buildstamp      20100628040502
-set buildhash       g511fa9
+set buildstamp      20100703040502
+set buildhash       g47e2b1
 version             0.7.5
-revision            6
+revision            7
 categories          math
 license             GPLv3+
 maintainers         snc
@@ -37,8 +37,8 @@ depends_lib		    port:gsl \
                     port:libglade2 \
                     port:libtool
 
-checksums           sha1    fbfad733f6ef5aa91aa1237a100dd8b3d3794c7e \
-                    rmd160  783b2855731cafb3e63e16a3c2d7866d2d168b64
+checksums           sha1    38a10593df5837ab7dca6e885423c83c12e0536f \
+                    rmd160  fdb73eae8bf345928d569dc0d69ad3d653bb623d
 
 #configure.optflags  -O0
 #configure.cflags-append -g
