--- a/dports/python/py27-twisted/Portfile
+++ b/dports/python/py27-twisted/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 PortGroup  python27 1.0
 
 name			py27-twisted
-version			10.0.0
+version			10.1.0
 categories		python devel net
 platforms		darwin
 maintainers		mcalhoun snc openmaintainer
@@ -20,9 +20,9 @@ homepage		http://www.twistedmatrix.com/
 master_sites	http://tmrc.mit.edu/mirror/twisted/Twisted/[join [lrange [split ${version} .] 0 1] .]
 distname		Twisted-${version}
 use_bzip2		yes
-checksums           md5     3b226af1a19b25e3b3e93cc6edf5e284 \
-                    sha1    8d48d78323ce7a1ccc8b02c55b693389d50b3bc3 \
-                    rmd160  4c006305e5cbd1e46ac7f9e2581e69714e94af18
+
+checksums           sha1    ad5a6d60c0d0316bd1b95566fd3ddb598ddd52e6 \
+                    rmd160  a344f9c4de66fdea1c1ef13194f4d4ce9b778139
 
 depends_lib-append  port:py27-zopeinterface
 
