add PortGroup, update destroot, #25567
git-svn-id: https://svn.macports.org/repository/macports/trunk@69511 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/pgf/Portfile
+++ b/dports/tex/pgf/Portfile
@@ -2,9 +2,11 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           texlive 1.0
 
 name                pgf
 version             2.00
+revision            1
 categories          tex textproc
 platforms           darwin
 maintainers         snc openmaintainer
@@ -29,14 +31,13 @@ use_configure       no
 build { }
 
 destroot {
-    set latex_local ${destroot}${prefix}/share/texmf-local
     set r ${workpath}/${name}-${version}
-    file mkdir ${latex_local}/tex
-    file copy ${r}/latex ${latex_local}/tex/
-    file copy ${r}/generic ${latex_local}/tex/
-    file copy ${r}/context ${latex_local}/tex/
-    file copy ${r}/plain ${latex_local}/tex/
-    file copy ${r}/doc ${latex_local}/
+    file mkdir ${destroot}${texlive_texmflocal}/tex
+    file copy ${r}/latex ${destroot}${texlive_texmflocal}/tex/
+    file copy ${r}/generic ${destroot}${texlive_texmflocal}/tex/
+    file copy ${r}/context ${destroot}${texlive_texmflocal}/tex/
+    file copy ${r}/plain ${destroot}${texlive_texmflocal}/tex/
+    file copy ${r}/doc ${destroot}${texlive_texmflocal}/
 }
 
 post-activate {
