--- a/dports/lang/python27/Portfile
+++ b/dports/lang/python27/Portfile
@@ -4,11 +4,11 @@ PortSystem 1.0
 PortGroup select 1.0
 
 name                    python27
-version                 2.7rc2
+version                 2.7
 
-#set major               [lindex [split $version .] 0]
-#set branch              [join [lrange [split ${version} .] 0 1] .]
-set branch              2.7
+set major               [lindex [split $version .] 0]
+set branch              [join [lrange [split ${version} .] 0 1] .]
+#set branch              2.7
 categories              lang
 platforms               darwin
 maintainers             jwa openmaintainer
@@ -30,9 +30,9 @@ master_sites            ${homepage}/ftp/python/${branch}/ \
 distname                Python-${version}
 use_bzip2               yes
 
-checksums           md5     c131fa22298f57e61bfc53c9e2b01a2b \
-                    sha1    b13bf39b27484e9f2f6e2640c69848242f63482d \
-                    rmd160  891982d24241243c8f27ab923e582d3d647ba7c7
+checksums           md5     0e8c9ec32abf5b732bea7d91b38c3339 \
+                    sha1    6bbcd1ab16d07765a7a405671e1e43a2e74b8e6a \
+                    rmd160  e89957d8e76127fd4a86fd733deed1c0ad1248df
 
 # patch-Lib-distutils-dist.py.diff comes from
 # <http://bugs.python.org/issue1180>
@@ -41,10 +41,13 @@ checksums           md5     c131fa22298f57e61bfc53c9e2b01a2b \
 # is to work around http://bugs.python.org/issue5766
 # patch-readlinefix.diff comes from
 # <http://bugs.python.org/issue5833>
-patchfiles              patch-Makefile.pre.in.diff \
-                        patch-setup.py.diff \
-                        patch-Lib-cgi.py.diff \
-                        patch-Lib-ctypes-macholib-dyld.py.diff
+patchfiles              \
+    patch-Makefile.pre.in.diff \
+    patch-setup.py.diff \
+    patch-Lib-cgi.py.diff \
+    patch-Lib-ctypes-macholib-dyld.py.diff \
+    patch-Lib-sysconfig.py.diff \
+    patch-Lib-distutils-util.py.diff
 
 #                        patch-Mac-PythonLauncher-Makefile.in.diff \
 #                        patch-Mac-Makefile.in.diff \
