--- a/dports/lang/python27/Portfile
+++ b/dports/lang/python27/Portfile
@@ -5,6 +5,7 @@ PortGroup select 1.0
 
 name                    python27
 version                 2.7
+epoch			1
 
 set major               [lindex [split $version .] 0]
 set branch              [join [lrange [split ${version} .] 0 1] .]
