--- a/dports/databases/libgda4/Portfile
+++ b/dports/databases/libgda4/Portfile
@@ -6,7 +6,7 @@ PortSystem 1.0
 name		libgda4
 conflicts       libgda3
 set gname       libgda
-version		4.1.6
+version		4.1.7
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	GDA provides uniform access to diffent kinds of data sources.
 long_description	\
@@ -21,11 +21,11 @@ distname	libgda-${version}
 master_sites    gnome:sources/${gname}/${branch}/
 use_bzip2	yes
 
-checksums           md5     353dbf284ca7b43935a8fb8863b8391b \
-                    sha1    b7d28750deef91cd6a247382a6125067d2d9f969 \
-                    rmd160  e8d70fa9e125d34a2c50e173885ecbf878a00f9c
+checksums           md5     b400f71c8366df7a6d366adca7b50979 \
+                    sha1    d7e27d0bc93cbed9fd34a123e18c623cf529a574 \
+                    rmd160  556dad433d461aad62bbf42aec9bb9e494346ee4
 
-patchfiles      patch-configure.in.diff
+patchfiles      patch-configure.ac.diff
 
 depends_build	port:pkgconfig \
                 port:flex \
