py2{5,6}-MMTK version bump; closes #25590
git-svn-id: https://svn.macports.org/repository/macports/trunk@69516 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py25-MMTK/Portfile
+++ b/dports/python/py25-MMTK/Portfile
@@ -5,7 +5,7 @@ PortGroup python25 1.0
 
 set realname        MMTK
 name                py25-${realname}
-version             2.6.0
+version             2.7.1
 revision            1
 categories          python science
 maintainers         mmoll openmaintainer
@@ -14,16 +14,22 @@ description         The Molecular Modelling Toolkit is a library for molecular \
 long_description    $description
 homepage            http://sourcesup.cru.fr/projects/mmtk/
 platforms           darwin
-master_sites        http://sourcesup.cru.fr/frs/download.php/2469/
-checksums           md5     225c2379f6ee140e301f7e9603e99093 \
-                    sha1    49a20959fd373ce34d1fa652d2d1247fb7ca9b6c \
-                    rmd160  c8bb0c6b02039b43f65809df12885fe8c12beeb7
+distname            ${realname}-${version}.tar.gz
+master_sites        https://sourcesup.cru.fr/frs/download.php/2936/
+checksums           md5     29638a6fdcc4fd8e4d3acf90645dac54 \
+                    sha1    cc858a6a7134ef620dac1851b38bb6f2b784d3f5 \
+                    rmd160  721d85799466a383a7e8dca01c5ecdbce9ab13a3
 distname            ${realname}-${version}
 patchfiles          patch-setup.py.diff
 depends_build		port:py25-distribute
 depends_lib         port:py25-scientific
 build.env           CPPFLAGS="-I${prefix}/include -I${prefix}/include/python2.5"
 
-livecheck.type      regex
-livecheck.url       ${homepage}
-livecheck.regex     Stable Releases</strong></td><td>(\[0-9.\]+)
+livecheck.type      none
+
+# The strings are multi-line, and hence fail (see r64144). Also, the dev
+# version is really the "stable" branch, given the infrequency of updates.
+
+# livecheck.type      regex
+# livecheck.url       ${homepage}
+# livecheck.regex     "Development Releases</strong>\\s*</td>\\s*<td>\\s*(\[0-9.\]+)"
