--- a/dports/gis/cgal/Portfile
+++ b/dports/gis/cgal/Portfile
@@ -2,10 +2,10 @@
 # $Id$
 
 PortSystem							1.0
+PortGroup               cmake 1.0
 
 name										cgal
-version									3.6
-revision                2
+version									3.6.1
 license									LGPL - QPL
 categories							gis science
 maintainers							vince
@@ -24,42 +24,17 @@ platforms								darwin
 homepage								http://www.cgal.org/
 
 fetch.ignore_sslcert 		yes
-master_sites						https://gforge.inria.fr/frs/download.php/26688
+master_sites						https://gforge.inria.fr/frs/download.php/27222/
 
 distname                CGAL-${version}
-checksums								md5     78dbaf85df0a53ca0e87308d9cbf671e \
-												sha1    d9fb363ed373f55050a3954481623d72c0656690 \
-												rmd160  263f98b0d8b8d52dc0f615709bbb3218c924e842
+checksums               md5     c84e11327bbdd8d83e2abd17c5293b5b \
+                        sha1    5e38aba6b01f56faf03868f8e93f14004bd340f9 \
+                        rmd160  a856ef1db560c68fec81a34bc64164331c603738
 
-depends_lib							port:cmake
 depends_lib-append			port:boost \
-												port:mpfr
-												
-configure.cmd						cmake .
-
-# Configuration
-# Start with no configure arguments: override defaults
-configure.pre_args
-configure.args
-configure.cflags
-configure.cxxflags
-
-configure.args-append		-DCMAKE_INSTALL_PREFIX=${prefix}
-configure.args-append		-DCMAKE_INSTALL_NAME_DIR=${prefix}/lib
-configure.args-append		-DCMAKE_BUILD_TYPE=Release
-configure.args-append		-DBUILD_SHARED_LIBS=TRUE
-configure.args-append		-DCMAKE_C_COMPILER=${configure.cc}
-configure.args-append		-DCMAKE_CXX_COMPILER=${configure.cxx}
-
-variant universal {
-	configure.universal_args-delete --disable-dependency-tracking
-	configure.args-append	-DCGAL_CXX_FLAGS=${configure.universal_args}
-	configure.args-append	-DCGAL_MODULE_LINKER_FLAGS=${configure.universal_args}
-	configure.args-append	-DCGAL_SHARED_LINKER_FLAGS=${configure.universal_args}
-	configure.args-append	-DCGAL_EXE_LINKER_FLAGS=${configure.universal_args}
-	
-	configure.universal_args
-}
+												port:mpfr \
+                        port:zlib \
+                        port:gmp
 
 variant demos description {Create demos} {
 	depends_lib-append		port:qt4-mac
@@ -67,5 +42,3 @@ variant demos description {Create demos} {
 	configure.args-append	-DWITH_examples=TRUE
 	configure.args-append	-DWITH_demos=TRUE
 }
-
-build.target
