Update to 1.4.4.  Added a patch by R Loomis to "place the Perl modules into the vendor_perl (for packaged modules) directories rather than the site_perl (for local system admin) directories."
git-svn-id: https://svn.macports.org/repository/macports/trunk@69519 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/rrdtool/Portfile
+++ b/dports/net/rrdtool/Portfile
@@ -3,7 +3,7 @@
 PortSystem	1.0
 
 name			rrdtool
-version			1.4.3
+version			1.4.4
 categories		net
 maintainers		markd
 description		Round Robin Database
@@ -11,7 +11,7 @@ long_description	RRDtool is a system to store and display time-series data
 homepage		http://oss.oetiker.ch/rrdtool/
 platforms		darwin
 master_sites		${homepage}pub/
-checksums		md5 492cf946c72f85987238faa2c311b7bb
+checksums		md5 93ad2fc2e9ddcd7d99c611fe30284a54
 
 depends_lib		port:expat \
 			path:lib/pkgconfig/glib-2.0.pc:glib2 \
@@ -26,6 +26,7 @@ depends_lib		port:expat \
 			port:intltool
 
 configure.args		--enable-perl-site-install \
+			--with-perl-options="INSTALLDIRS=vendor" \
 			--with-tcllib=${prefix}/lib \
 			--disable-python \
 			--disable-ruby \
