move texinfo to depends_lib, needed for post-activate
git-svn-id: https://svn.macports.org/repository/macports/trunk@69521 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/aspell/Portfile
+++ b/dports/textproc/aspell/Portfile
@@ -23,8 +23,8 @@ checksums	            md5 bc80f0198773d5c05086522be67334eb \
 		                sha1 335bcb560e00f59d89ec9e4c4114c325fb0e65f4 \
 		                rmd160 315638cc7cc4ce9d3dc09c7e15faf637855d504e
 
-depends_build           port:texinfo
-depends_lib             port:gettext
+depends_lib             port:gettext port:texinfo
+# texinfo is also used in post-activate
 
 patchfiles              patch-mk-static-filter.pl.diff
 
