teg: add long_description
git-svn-id: https://svn.macports.org/repository/macports/trunk@69523 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/teg/Portfile
+++ b/dports/games/teg/Portfile
@@ -8,6 +8,10 @@ revision        4
 categories      games
 maintainers     nomaintainer
 description     Tenes Empanadas Graciela - A risk clone
+long_description \
+                Tenes Empanadas Graciela (TEG) is a clone of 'Plan Tactico y \
+                Estrategico de la Guerra', which is a pseudo-clone of Risk, \
+                a multiplayer turn-based strategy game.
 homepage        http://teg.sourceforge.net/
 platforms	    darwin
 
