--- a/dports/mail/ssmtp/Portfile
+++ b/dports/mail/ssmtp/Portfile
@@ -14,6 +14,7 @@ long_description	This is sSMTP, a program that replaces sendmail on workstations
 			program accepts mail and sends it to the mailhub, optionally replacing the \
 			domain in the From: line with a different one.
 platforms	darwin freebsd
+homepage    http://packages.qa.debian.org/s/ssmtp.html
 master_sites	http://ftp.debian.org/debian/pool/main/s/${name}/ \
 		ftp://ftp.icm.edu.pl/pub/Linux/debian/pool/main/s/${name}/
 distfiles	${name}_${version}.orig${extract.suffix}
