Moved the setting of 'qt_dir' from inside variants to inside 'if' statements so that they are processed in-order with the Portfile statements and in the main scope of the Portfile.  Hopefully fixes ticket #25574.
git-svn-id: https://svn.macports.org/repository/macports/trunk@69526 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/qwt52/Portfile
+++ b/dports/graphics/qwt52/Portfile
@@ -30,21 +30,24 @@ platforms           darwin
 
 patchfiles          patch-qwtconfig.pri.diff
 
-# set the qt_dir variable to nothing; makes 'port' happy
-set qt_dir ""
-
 variant qt3 conflicts qt4 description {Use qt3-mac} {
     depends_lib-append  port:qt3-mac
-    set qt_dir          ${prefix}/libexec/qt3-mac
 }
 
 variant qt4 conflicts qt3 description {Use qt4-mac} {
     depends_lib-append  port:qt4-mac
-    set qt_dir          ${prefix}/libexec/qt4-mac
 }
 
-if {![variant_isset qt3] && ![variant_isset qt4]} {
-    default_variants    +qt4
+# move setting of 'qt_dir' outside variants, since 'if' statements are
+# processed in-order while variants are processed after everything else.
+if {[variant_isset qt3]} {
+    set qt_dir          ${prefix}/libexec/qt3-mac
+} else {
+    # when variant 'qt3' is not set, use qt4 whether by default or via
+    # the user's variant choice
+    if {![variant_isset qt4]} {
+        default_variants    +qt4
+    }
     set qt_dir          ${prefix}/libexec/qt4-mac
 }
 
