--- a/dports/graphics/qwtplot3d/Portfile
+++ b/dports/graphics/qwtplot3d/Portfile
@@ -23,21 +23,24 @@ checksums           md5    2f14660152e2e26bfeaaeec479ed9f2b \
                     sha1   4463fafb8420a91825e165da7a296aaabd70abea \
                     rmd160 0f28462cb95ef6091d73642c8b26ece60d50bfb8
 
-# set the qt_dir variable to nothing; makes 'port' happy
-set qt_dir ""
-
 variant qt3 conflicts qt4 description {Use qt3-mac} {
     depends_lib-append  port:qt3-mac
-    set qt_dir          ${prefix}/libexec/qt3-mac
 }
 
 variant qt4 conflicts qt3 description {Use qt4-mac} {
     depends_lib-append  port:qt4-mac
-    set qt_dir          ${prefix}/libexec/qt4-mac
 }
 
-if {![variant_isset qt3] && ![variant_isset qt4]} {
-    default_variants    +qt4
+# move setting of 'qt_dir' outside variants, since 'if' statements are
+# processed in-order while variants are processed after everything else.
+if {[variant_isset qt3]} {
+    set qt_dir          ${prefix}/libexec/qt3-mac
+} else {
+    # when variant 'qt3' is not set, use qt4 whether by default or via
+    # the user's variant choice
+    if {![variant_isset qt4]} {
+        default_variants    +qt4
+    }
     set qt_dir          ${prefix}/libexec/qt4-mac
 }
 
