Build without gd, as it isn't used in the open-source edition at all anyway
git-svn-id: https://svn.macports.org/repository/macports/trunk@69528 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/cfengine3/Portfile
+++ b/dports/sysutils/cfengine3/Portfile
@@ -28,8 +28,7 @@ platforms			darwin
                     
 depends_lib			port:db46 \
 					port:openssl \
-					port:pcre \
-					port:gd2
+					port:pcre
 
 patchfiles          patch-src-files_operators.c.diff
 
@@ -49,6 +48,7 @@ configure.args		--mandir='\${prefix}/share/man' \
 					--with-workdir="${cfworkdir}" \
 					--with-berkeleydb=default \
 					--with-openssl=${prefix} \
-					--with-pcre=${prefix}
+					--with-pcre=${prefix} \
+					--without-gd
 
 # vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
