texi2html: set missing execute bit on install-sh (#25588)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69529 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/texi2html/Portfile
+++ b/dports/textproc/texi2html/Portfile
@@ -23,6 +23,10 @@ patchfiles	patch-test-run_test.sh.diff
 
 depends_lib	path:bin/perl:perl5
 
+post-patch {
+    file attributes ${worksrcpath}/install-sh -permissions +x
+}
+
 configure.perl	${prefix}/bin/perl
 
 use_parallel_build  yes
