p5-net-ssleay: update to 1.36
git-svn-id: https://svn.macports.org/repository/macports/trunk@69530 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-net-ssleay/Portfile
+++ b/dports/perl/p5-net-ssleay/Portfile
@@ -3,16 +3,15 @@
 PortSystem 1.0
 PortGroup perl5 1.0
 
-perl5.setup		Net-SSLeay 1.35
-revision		2
+perl5.setup		Net-SSLeay 1.36
 maintainers		nomaintainer
 description		Perl extension for using OpenSSL
 long_description	Net::SSLeay Perl module for using OpenSSL
 homepage		http://search.cpan.org/dist/Net-SSLeay/
-checksums		md5 1e4ec37a4467eb66a62d3c090ac9029b
+checksums		md5 54061638720dd6a325395331c77f21d8 \
+			sha1 e8cfb6355a596471518356a29bfe53ab2011c685
 platforms		darwin
 
 depends_build-append		port:openssl
 
 configure.env	OPENSSL_PREFIX=${prefix}
-
