py26-docutils: update to 0.7
git-svn-id: https://svn.macports.org/repository/macports/trunk@69532 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-docutils/Portfile
+++ b/dports/python/py26-docutils/Portfile
@@ -5,9 +5,9 @@ PortSystem 1.0
 PortGroup python26 1.0
 
 name                py26-docutils
-version             0.6
-revision            1
+version             0.7
 categories-append   textproc
+license             GPL-2 PSF-2.1.1
 maintainers         jmr openmaintainer
 description         A set of tools for processing plaintext documentation
 long_description    Docutils is a set of tools for processing plaintext \
@@ -16,17 +16,15 @@ long_description    Docutils is a set of tools for processing plaintext \
                     easy to use, what-you-see-is-what-you-get plaintext \
                     markup language.
 platforms           darwin
-if {[info exists supported_archs]} {
-    supported_archs noarch
-}
+supported_archs     noarch
 
 homepage            http://docutils.sourceforge.net/
 master_sites        sourceforge:docutils
 distname            docutils-${version}
 
-checksums           md5     5c615479a965bc773892f585e0e08119 \
-                    sha1    1b3bfc3bdf285c208dd0c29427fd6b096569aa92 \
-                    rmd160  627665526f25d93277b977c6bfdb1b3f0554d69a
+checksums           md5     9aec716baf15d06b5aa57cf8d5591c15 \
+                    sha1    e82988f826844ef8d8bf28fa286a19de211349cd \
+                    rmd160  73c832860405c3cba655c92aacccca1582c8f905
 
 depends_lib         port:py26-roman
 
