php5, php5-devel: revbump for openssl 1.0.0a (used by the default +apache2 variant)
git-svn-id: https://svn.macports.org/repository/macports/trunk@69533 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/php5-devel/Portfile
+++ b/dports/lang/php5-devel/Portfile
@@ -6,6 +6,7 @@ name                    php5-devel
 conflicts               php5 php52
 epoch                   1
 version                 5.3.3RC2
+revision                1
 set major               [lindex [split ${version} .] 0]
 set my_name             php${major}
 dist_subdir             ${my_name}
