--- a/dports/lang/php5/Portfile
+++ b/dports/lang/php5/Portfile
@@ -6,7 +6,7 @@ name                    php5
 conflicts               php5-devel php52
 epoch                   1
 version                 5.3.2
-
+revision                1
 set major               [lindex [split ${version} .] 0]
 set my_name             php${major}
 dist_subdir             ${my_name}
