lighttpd: revbump to link with openssl 1.0.0a, and to make ssl the default
git-svn-id: https://svn.macports.org/repository/macports/trunk@69535 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/lighttpd/Portfile
+++ b/dports/www/lighttpd/Portfile
@@ -4,6 +4,7 @@
 PortSystem 1.0
 name              lighttpd
 version           1.4.26
+revision          1
 set branch        [join [lrange [split ${version} .] 0 1] .]
 categories        www
 platforms         darwin
@@ -108,3 +109,5 @@ variant davprops {
                         
    configure.args-append --with-webdav-props
 }
+
+default_variants            +ssl
